--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
+    "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.11.5",
     "pm2": "^5.4.1",
